--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/app.css">
     <link rel="icon" type="image/png" href="../src/img/pokeball.png">
-
-    <title>POKEDEX</title>
-
+    <title>POKEDEX of Chems Lomito</title>
 </head>
 <body>
-        <div class="app" id="app">
-
-        </div>
-
-    <script src="../src/app.js"></script>
+<div class="app" id="app">
+</div>
 </body>
 </html>
